[gd_scene load_steps=9 format=3 uid="uid://ceh5vs0wvmju7"]

[ext_resource type="Script" path="res://scripts/prologue.gd" id="1_051pu"]
[ext_resource type="PackedScene" uid="uid://y6napfl41381" path="res://scenes/player.tscn" id="2_3qno1"]
[ext_resource type="PackedScene" uid="uid://01trnfx0bieo" path="res://scenes/Map2.tscn" id="2_g3sl3"]
[ext_resource type="PackedScene" uid="uid://bhrndphenp0fr" path="res://scenes/dialog_box.tscn" id="3_mjnag"]
[ext_resource type="PackedScene" uid="uid://bqhs88q4rsl01" path="res://scenes/settings.tscn" id="5_i6nsk"]
[ext_resource type="PackedScene" uid="uid://0e054jf2e71e" path="res://scenes/hud.tscn" id="5_ln8jo"]
[ext_resource type="PackedScene" uid="uid://bjrtnhm6q574e" path="res://scenes/bgm.tscn" id="6_xsin0"]

[sub_resource type="Curve2D" id="Curve2D_su6ya"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -58, 1092, 0, 0, 0, 0, -54.0039, -99.849, 0, 0, 0, 0, 2005, -97, 0, 0, 0, 0, 2000, 1092, 0, 0, 0, 0, -58, 1092)
}
point_count = 5

[node name="Prologue" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_051pu")

[node name="Map2" parent="." instance=ExtResource("2_g3sl3")]

[node name="Player" parent="." instance=ExtResource("2_3qno1")]
position = Vector2(960, 500)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-996.923, -567.31)
scale = Vector2(1.07029, 1.14864)
curve = SubResource("Curve2D_su6ya")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-58, 1092)
rotation = -1.56744

[node name="DialogBox" parent="Player" instance=ExtResource("3_mjnag")]
offset_top = 200.0
offset_bottom = 200.0
messages = Array[String](["-PROLOGUE 1-", "Another day begins, and another monster slaying massacre is setâ€¦", "How many will I be able to slay today? ", "[i]Hey, this is the voice in your head teaching you the basics of how to control your own body. First you can walk, cool right?[/i]", "[i]And how do you walk you ask?
Well.. that's easy.
Just press WASD or arrow keys.
[/i]", "[i]Besides walking, you can press E, SPACE, Z or LMB to interact and skips those dialogues.[/i]", "[i]That's it. Pretty simply right?
Well have some fun slaying thoses monsters.
[/i]"])

[node name="Hud" parent="Player" instance=ExtResource("5_ln8jo")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = 5.0
offset_top = -534.0
offset_right = 5.0
offset_bottom = -534.0
grow_vertical = 1
size_flags_horizontal = 4

[node name="Settings" parent="Player" instance=ExtResource("5_i6nsk")]
process_mode = 2
visible = false
z_index = 100
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -217.0
offset_right = 158.5
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Bgm" parent="." instance=ExtResource("6_xsin0")]

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
